# fabsebot

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PP.md  README.md  TOS.md  clippy.toml  config-example.toml  deploy-commands.js  index.js  package-lock.json  profile.json  renovate.json  rust-toolchain.toml  rustc-ice-2024-11-01T06_55_27-1407.txt  rustc-ice-2024-11-01T06_55_27-1408.txt  rustc-ice-2024-11-01T06_57_03-1628.txt  rustc-ice-2024-11-01T06_57_03-1629.txt  rustc-ice-2024-11-01T06_58_15-1946.txt  rustc-ice-2024-11-01T06_58_15-1947.txt  rustc-ice-2024-11-01T06_58_48-2951.txt  rustc-ice-2024-11-01T06_58_48-2952.txt  rustc-ice-2024-11-01T06_59_36-5359.txt  rustc-ice-2024-11-01T06_59_36-5360.txt  rustc-ice-2024-11-01T07_00_05-5516.txt  rustfmt.toml  temp
.cargo/: config.toml
.sqlx/: query-00de3fb4f8ffa437dda2cb18347a5c2a0da91d398bd0e6e26925702d9c21d70a.json  query-0135fa542d7c64add3ab303212229a1123bf109cfb3950c1e5bf51127a0b50b1.json  query-044ec8069e5cb2bab52b99c35835cb5a90bf630764bc795a0f0fe48688309785.json  query-056204ce2d52c17f99981c599a5eb948ad1252c6b199c6db3ece3f63fa0bafa5.json  query-0830007648aade97303f7ebdc0da771e661b298736014fba6552c1b8b6ce798c.json  query-09a7e006eaa80c8a02c34dfed1fed37be6f15ef199d25282f8392f6595472f85.json  query-0ba9e1d345c3fc4671de2919d5814e76dda7e0c4de8aa822eeb20239b00e90e7.json  query-0f18b49242104af28a71f42c2de089628d9c6a928c7f16620da56f8274de3d66.json  query-13740019ad7fce5c2b1557f0e5b181a9140177244f4d89414219434bfef9c4ea.json  query-149351b70b9bdf6d586637e9cbf38c846ad2613aeb2e632094b653fac0fb01ef.json  query-1581343b6d565b7242a4455c93da1cfc6c4298e1a40c36ff02ce09dde6808b55.json  query-1602ef58db30dba8d0c5554030a7d9c6ed1f72549aaeebed71bc4a5e3f92ffae.json  query-16c9d21cb3953a1cf9a55a8f9cbdaadaef1d9fd6e963b3fca4a849012b5dc02e.json  query-1a3b576959b88ef4a1a080e3b0abbfeb05d36c1611949b08e1286dc33a870f6d.json  query-1b7937083703d58cdf2f3da7a27ed8dff56972361881fd53fa6f6f8a0c91c172.json  query-1c763c918dce1de37a8b1aed7ab785873b9d2ed69066b7b5bd67a493ba9914d8.json  query-1f5c7c415ac310916958c6111389c985e735cd21d4985b0d273de2f3ca7d8bec.json  query-20253b547284809bb9d6397cf7d96a49ef7376a965939d4dc742e40b3a1b4c7b.json  query-21afb2f43fa17106e9ca6469fab57ff3e01b4c61b61265c8c02ad2d25983130a.json  query-2253e5ff1cfb0a1b41cb8f258a0df66351ffe363833df34a8376bca37dd94be3.json  query-2469e4720baa47b276a375b7c6f0b0aa4a051e53bc97c14bd13dc4a5e92d3645.json  query-25c3fd4b62651d57dd2c6962abe98f5203367584dfcc616455275d08437da90a.json  query-288221956ed4eb327fc922469d5848cdd2af546e488d91fcd526a5a29ae9f12c.json  query-2b7728c43f84fa412e6b2b154cb4eb13e85f3244d31acfb45ad52c81f20d71fe.json  query-2cbdf496758894b1fd1553eede1bf37796823d8d2435aef14a7b9d2bd04ca097.json  query-2e349776ce293e61fb67fc8b13d3ebcfaeea30945d37e5dd74d08e205f8bbb8b.json  query-2fa9580eeffd14f8c86eb0dbe3ad6022fe1ea8208bdbf2a934257a3bb1f85333.json  query-2fe04732e25410962199b20d64bebeeaa0321b65ab3541432a5d26192c42d57a.json  query-317aa730374d6ab0e6c6ee619782f4a7e2fa79971bd169c8a7e030bbc8cbca3a.json  query-34e40bb99867052adc800bdb7c41f0278da26c6187d189fc0b1f8c4d249c33f1.json  query-351e3d4cdd33d3825f4fe4cffac1053b30af4687a02bfde53df65b77c2582666.json  query-353ecb653deee67f14390d42e4315293924f0711d77bb55875edb7eadc6588f1.json  query-35b6b3966cc0e4978b9c7fd71b5103fee3eefc4c4ef84aacd3241afdf9c6445d.json  query-38a3c80fb2b3e833841518ff544dfc4ca71e5474f54d8ac792d263b7b0f25cfa.json  query-39ea9951d8a99584730ccf90c2d862593fea0975c223ae8401348311e6caeb41.json  query-3a2450d64bfc2f3ba34b6416e04288fe5bf9765c3e74e9ce6030307ba0c57476.json  query-3acad419f802b0f8a61910c6e1dee1640d149b0188d63696ba1d7be8299ac7d4.json  query-3c3671f465084090bf273787cc0c2619f3e53717463b3154ec1dd0e27cf3adfa.json  query-3e368fba22f4565ced072b4f8db6e381b435d32097098086095f8d1c417511f7.json  query-4067f810188542d97b77f39d92e182171e4671c4c6b6eca24b0391b794d158fb.json  (+118 more)
bench_assets/: avatar.avif
events/: interaction_create.js
examples/: quote_throughput.rs
fabsebot_commands/: Cargo.toml
fabsebot_commands/src/: api_calls.rs  funny.rs  games.rs  info.rs  lib.rs  misc.rs  music.rs  settings.rs
fabsebot_core/: Cargo.toml
fabsebot_core/benches/: quote_bench.rs
fabsebot_core/src/: database.rs  events.rs  handlers.rs  lib.rs  utils.rs
fabsebot_core/src/config/: constants.rs  settings.rs  types.rs
fabsebot_core/src/errors/: commands.rs
fabsebot_core/src/events/: bot_ready.rs  guild_create.rs  guild_delete.rs  interaction.rs  member_addition.rs  message_delete.rs  message_sent.rs
fabsebot_core/src/stats/: counters.rs
fabsebot_core/src/utils/: ai.rs  helpers.rs  image.rs  voice.rs  webhook.rs
fabsebot_db/: Cargo.toml
migrations/: 0019_add_music_channel.sql  0020_add_waifu_channel.sql  0021_rate_to_waifu_channel.sql  0022_track_last_occurrence.sql  0023_delete_chatbot_parameters.sql  0024_global_user_ids.sql  0025_combined_word_reaction.sql  0026_use_emoji_id.sql  0027_nullable_emoji.sql  0028_false_guild_emoji.sql  0029_word_reaction_content_null.sql  0030_chatbot_internet_bool.sql  0031_remove_internet_search_flag.sql  0032_server_chatbot_role.sql  0033_add_current_voice_channel.sql  0034_song_history.sql  0035_jsonb_pinged_links.sql  0036_id_functions.sql  0037_not_null_requested_by.sql  0038_drop_queue_fields.sql  0040_drop_functions.sql  0041_drop_global_music.sql  0042_drop_current_voice_channel.sql  01_initial_migration.sql  02_add_channels.sql  03_add_global_chat_toggle.sql  04_prefix_option.sql  04_unite_guild_settings.sql  05_global_music_playback.sql  06_move_to_guilds_table.sql  06_reduced_music_fields.sql  07_renamed_global_call.sql  08_allow_null.sql  08_separate_word_tracking.sql  09_word_reaction.sql  10_global_call.sql  11_bool_not_null.sql  11_user_settings.sql  12_emoji_reaction.sql  13_emoji_reaction_content_not_null.sql  (+8 more)
migrations_old/: 02_words_count.sql  03_words_count_alter.sql  05_guilds_table.sql  07_guild_settings_move_to_guilds_table.sql  09_replace_0_with_null.sql  10_add_chat_role.sql  12_user_settings_message_count_0.sql  14_add_afk_to_user_settings.sql  17_bigint_to_int.sql  (+1 more)
(+52 files in other folders)
