cargo-features = ["codegen-backend"]

[package]
name = "fabsebot"
version = "0.6.0"
edition = "2024"

[workspace]
members = [
    "fabsebot_commands",
    "fabsebot_core",
    "fabsebot_db",
]
resolver = "3"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
absolute_paths = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
error_impl_error = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
large_include_file = "warn"
mod_module_files = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stdout = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
str_to_string = "warn"
string_to_string = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
use_debug = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
unused_trait_names = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
ab_glyph = "*"
anyhow = "*"
base64 = "*"
bytes = "*"
dashmap = "*"
fastrand = "*"
image = { version = "*", default-features = false, features = ["gif", "rayon", "webp"] }
imageproc = { version = "*", default-features = false, features = ["rayon"] }
indexmap = "*"
metrics = { version = "*" }
mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
#poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
poise = { git = "https://github.com/FabseGP/poise-fork.git", branch = "components-v2" }
rayon = "*"
reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
scraper = "*"
serde = "*"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "serenity-next", features = ["builtin-queue", "receive"] }
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "main", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
symphonia = { version = "*", default-features = false, features = ["flac", "mkv", "opt-simd-avx", "pcm", "wav"] }
systemstat = "*"
textwrap = "*"
tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
tracing = "*"
urlencoding = "*"
uuid = { version = "*", features = ["v4"] }
winnow = { version = "*", features = ["simd"] }

[lints]
workspace = true

[dependencies]
fabsebot_commands = { path = "fabsebot_commands" }
fabsebot_core = { path = "fabsebot_core" }
fabsebot_db = { path = "fabsebot_db" }
anyhow = { workspace = true }
metrics-exporter-prometheus = { version = "*", default-features = false, features = ["http-listener"] }
mimalloc = "*"
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-metrics = { version = "*" }
toml = "*"
tracing = { workspace = true }
tracing-subscriber = "*"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
debug = "line-tables-only"
panic = "abort"
#codegen-backend = "cranelift"

[package.metadata.cargo-machete]
ignored = [
    "symphonia",
    "tokio-metrics"  
]
