cargo-features = ["panic-immediate-abort"]

[package]
name = "fabsebot"
version = "0.6.0"
edition = "2024"

[workspace]
members = [
    "fabsebot_commands",
    "fabsebot_core",
    "fabsebot_db",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
error_impl_error = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
large_include_file = "warn"
mod_module_files = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stdout = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
str_to_string = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
use_debug = "warn"
unwrap_in_result = "warn"
unused_trait_names = "warn"
unused_result_ok = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"

[patch.crates-io]
audiopus_sys = { git = 'https://github.com/sevenc-nanashi/audiopus_sys', rev = '00e9d16' }

[workspace.dependencies]
ab_glyph = "*"
anyhow = "*"
base64 = "*"
bytes = "*"
criterion = { version = "*", features = ["async_tokio", "html_reports"] }
emojis = "*"
fastrand = "*"
image = { version = "*", default-features = false, features = ["avif", "gif", "jpeg", "nasm", "rayon", "webp"] }
imageproc = { version = "*", default-features = false, features = ["rayon", "text"] }
metrics = { version = "*" }
mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
rayon = "*"
reqwest = { version = "*", default-features = false, features = ["http3", "rustls-tls", "zstd"] }
scraper = "*"
serde = "*"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "serenity-next", features = ["builtin-queue", "receive"] }
sqlx = { version = "*", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
symphonia = { version = "*", default-features = false, features = ["aac", "mkv", "pcm"] }
systemstat = "*"
textwrap = "*"
tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
tracing = "*"
url = "*"
uuid = { version = "*", features = ["v4", "v5"] }
winnow = { version = "*", features = ["simd"] }

[lints]
workspace = true

[dependencies]
fabsebot_commands = { path = "fabsebot_commands" }
fabsebot_core = { path = "fabsebot_core", default-features = false, features = ["quote_webp"] }
fabsebot_db = { path = "fabsebot_db" }
anyhow = { workspace = true }
metrics-exporter-prometheus = { version = "*", default-features = false, features = ["http-listener"] }
mimalloc = "*"
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-metrics = { version = "*" }
toml = "*"
tracing = { workspace = true }
tracing-subscriber = "*"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "immediate-abort"

[profile.dev]
opt-level = 1
panic = "immediate-abort"
debug = "line-tables-only"

[profile.bench]
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.cargo-machete]
ignored = [
    "symphonia",
    "tokio-metrics"  
]

[features]
simd-avx = ["fabsebot_core/simd-avx"]
simd-neon = ["fabsebot_core/simd-neon"]
