cargo-features = ["panic-immediate-abort"]

[package]
name = "fabsebot"
edition.workspace = true
version.workspace = true

[workspace]
members = [
    "fabsebot_commands",
    "fabsebot_core",
    "fabsebot_db",
]
resolver = "3"
package.edition = "2024"
package.version = "0.6.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
error_impl_error = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
large_include_file = "warn"
mod_module_files = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stdout = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
str_to_string = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
use_debug = "warn"
unwrap_in_result = "warn"
unused_trait_names = "warn"
unused_result_ok = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"

[patch.crates-io.songbird]
git = "https://github.com/FabseGP/songbird.git"
branch = "update-deps"

[workspace.dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
dashmap = "6.1.0"
emojis = "0.8.1"
fastrand = "2.4.1"
image = { version = "0.25.10", default-features = false, features = ["avif", "gif", "jpeg", "nasm", "rayon", "webp"] }
imageproc = { version = "0.26.1", default-features = false, features = ["rayon", "text"] }
#lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs/", branch = "main", default-features = false, features = ["macros", "serenity", "songbird", "tungstenite-rustls-native-roots" ] }
metrics = { version = "0.24.3" }
mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "v0.11.x" }
#poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
poise = { git = "https://github.com/FabseGP/poise.git", branch = "update-deps" }
rayon = "1.12"
reqwest = { version = "0.13.2", default-features = false, features = ["http3", "json", "query", "rustls", "zstd"] }
scraper = "0.26"
serde = "1.0.228"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
songbird = { git = "https://github.com/FabseGP/songbird.git", branch = "update-deps", features = ["builtin-queue", "receive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "isomp4", "mkv", "pcm", "wav"] }
systemstat = "0.2.6"
textwrap = "0.16.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
winnow = { version = "1.0.1", features = ["simd"] }

[lints]
workspace = true

[dependencies]
fabsebot_commands = { path = "fabsebot_commands" }
fabsebot_core = { path = "fabsebot_core" }
fabsebot_db = { path = "fabsebot_db" }
anyhow = { workspace = true }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }
bc-mimalloc = { version = "0.1.48", features = ["v3"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-metrics = { version = "0.5.0" }
toml = "1.1.2"
tracing = { workspace = true }
tracing-subscriber = "0.3.23"
fastrand = { workspace = true }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "immediate-abort"

[profile.dev]
opt-level = 1
panic = "immediate-abort"
debug = "line-tables-only"

[profile.bench]
panic = "unwind"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.cargo-machete]
ignored = [
    "symphonia",
    "tokio-metrics"  
]

[features]
simd-avx = ["fabsebot_core/simd-avx"]
simd-neon = ["fabsebot_core/simd-neon"]
