[package]
name = "fabsebot_commands"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
fabsebot_core = { path = "../fabsebot_core", default-features = false, features = ["quote_webp"] }
fabsebot_db = { path = "../fabsebot_db" }
ab_glyph = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
fastrand = { workspace = true }
image = { workspace = true, default-features = false, features = ["avif", "gif", "jpeg", "nasm", "rayon", "webp"] }
metrics = { workspace = true }
poise = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true, default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
songbird = { workspace = true, features = ["builtin-queue", "receive"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
