[package]
name = "fabsebot_commands"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
fabsebot_core = { path = "../fabsebot_core" }
fabsebot_db = { path = "../fabsebot_db" }
ab_glyph = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytesize = { workspace = true }
fastrand = { workspace = true }
image = { workspace = true, default-features = false, features = ["avif", "gif", "jpeg", "nasm", "png", "rayon", "webp"] }
poise = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["http3", "json", "multipart", "query", "rustls", "zstd"] }
serde = { workspace = true }
serenity = { workspace = true, default-features = false, features = ["cache", "rustls_backend", "temp_cache", "transport_compression_zstd"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio", "time", "uuid"] }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
