[package]
name = "fabsebot_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
fabsebot_db = { path = "../fabsebot_db" }
ab_glyph = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
emojis = { workspace = true }
fastrand = { workspace = true }
image = { workspace = true, default-features = false, features = ["avif", "gif", "jpeg", "nasm", "rayon", "webp"] }
imageproc = { workspace = true, default-features = false, features = ["rayon", "text"] }
metrics = { workspace = true }
mini-moka = { workspace = true }
poise = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["http3", "rustls-tls", "zstd"] }
scraper = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true, default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
songbird = { workspace = true, features = ["builtin-queue", "receive"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
symphonia = { workspace = true, default-features = false, features = ["aac", "mkv", "pcm"] }
systemstat = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "quote_bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["symphonia"]

[features]
simd-avx = ["symphonia/opt-simd-avx"]
simd-neon = ["symphonia/opt-simd-neon"]
quote_webp = []
