[package]
name = "fabsebot_core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
fabsebot_db = { path = "../fabsebot_db" }
ab_glyph = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
emojis = { workspace = true }
fastrand = { workspace = true }
image = { workspace = true, default-features = false, features = ["avif", "gif", "jpeg", "nasm", "rayon", "webp"] }
imageproc = { workspace = true, default-features = false, features = ["rayon", "text"] }
#lavalink-rs = { workspace = true, default-features = false, features = ["macros", "serenity", "songbird", "tungstenite-rustls-native-roots" ] }
metrics = { workspace = true }
mini-moka = { workspace = true }
poise = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["http3", "json", "query", "rustls", "zstd"] }
scraper = { workspace = true }
serde = { workspace = true }
serenity = { workspace = true, default-features = false, features = ["cache", "rustls_backend", "transport_compression_zstd"] }
songbird = { workspace = true, features = ["builtin-queue", "receive"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
symphonia = { workspace = true, default-features = false, features = ["aac", "isomp4", "mkv", "pcm", "wav"] }
systemstat = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "quote_bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["symphonia"]

[features]
simd-avx = ["symphonia/opt-simd-avx"]
simd-neon = ["symphonia/opt-simd-neon"]
