[package]
name = "fabsebot_core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
fabsebot_db = { path = "../fabsebot_db" }
ab_glyph.workspace = true
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
dashmap.workspace = true
emojis.workspace = true
fastrand.workspace = true
image = { workspace = true, default-features = false, features = ["avif", "gif", "jpeg", "nasm", "png", "rayon", "webp"] }
imageproc = { workspace = true, default-features = false, features = ["rayon", "text"] }
jiff.workspace = true
lavalink-rs = { workspace = true, default-features = false, features = ["macros", "serenity", "songbird", "tungstenite-rustls-native-roots" ] }
metrics.workspace = true
mini-moka.workspace = true
poise.workspace = true
rayon.workspace = true
reqwest = { workspace = true, default-features = false, features = ["http3", "json", "multipart", "query", "rustls", "zstd"] }
serde.workspace = true
serde_json.workspace = true
serenity = { workspace = true, default-features = false, features = ["cache", "rustls_backend", "temp_cache", "transport_compression_zstd"] }
songbird = { workspace = true, features = ["builtin-queue", "receive"] }
sqlx = { workspace = true, default-features = false, features = ["macros", "postgres", "runtime-tokio", "time", "uuid"] }
symphonia = { workspace = true, features = ["aac", "isomp4", "mkv", "pcm", "wav", "ogg", "vorbis", "flac", "mp3"] }
systemstat.workspace = true
textwrap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "quote_bench"
harness = false

[features]
simd-avx = ["symphonia/opt-simd-avx"]
simd-neon = ["symphonia/opt-simd-neon"]

[package.metadata.cargo-machete]
ignored = [
    "symphonia"  
]
